Update: Fixed an alignment issue in the quick-access section

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,7 +100,8 @@ li:last-child .nav-link:hover {
   gap: 1rem;
 }
 
-.social {
+.social,
+.quick-access-icon {
   width: 20px;
 }
 
@@ -365,6 +366,10 @@ li:last-child .nav-link:hover {
   fill: #777;
 }
 
+.quick-access-socials li {
+  margin-bottom: 5px;
+}
+
 @media(max-width: 1048px) {
   a {
     font-size: 14px;
@@ -378,90 +383,90 @@ li:last-child .nav-link:hover {
     left: 35px;
     bottom: -20px;
   }
+}
 
-  @media(max-width: 860px) {
-    .container-header {
-      padding-left: 8vw;
-      padding-right: 8vw;
-    }
+@media(max-width: 860px) {
+  .container-header {
+    padding-left: 8vw;
+    padding-right: 8vw;
+  }
 
-    .icon-header {
-      width: 160px;
-    }
+  .icon-header {
+    width: 160px;
+  }
 
-    .container-nav {
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      width: 80%;
-      height: 100vh;
-      position: fixed;
-      top: 0;
-      right: -100%;
-      z-index: 100;
-      background-color: #333;
+  .container-nav {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    z-index: 100;
+    background-color: #333;
 
-      transition: all 0.2s ease-in-out;
-    }
+    transition: all 0.2s ease-in-out;
+  }
 
-    .nav-item:last-of-type {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
+  .nav-item:last-of-type {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
-    .nav-item {
-      margin-bottom: 80px;
-    }
+  .nav-item {
+    margin-bottom: 80px;
+  }
 
-    .nav-link {
-      font-size: 20px;
-      padding: 1.5rem 2rem;
-    }
+  .nav-link {
+    font-size: 20px;
+    padding: 1.5rem 2rem;
+  }
 
-    .socials {
-      gap: 4rem;
-      text-align: center;
-      left: 10px;
-    }
+  .socials {
+    gap: 4rem;
+    text-align: center;
+    left: 10px;
+  }
 
-    .social {
-      fill: #fff;
-      margin-top: 100px;
-      width: 40px;
-    }
+  .social {
+    fill: #fff;
+    margin-top: 100px;
+    width: 40px;
+  }
 
-    .open-menu {
-      display: block;
-    }
+  .open-menu {
+    display: block;
+  }
 
-    .close-menu {
-      position: absolute;
-      top: 40px;
-      right: 40px;
-    }
+  .close-menu {
+    position: absolute;
+    top: 40px;
+    right: 40px;
+  }
 
-    .hero-content {
-      align-items: center;
-    }
+  .hero-content {
+    align-items: center;
+  }
 
-    .hero-title,
-    .hero-text {
-      max-width: 80%;
-      text-align: center;
-    }
+  .hero-title,
+  .hero-text {
+    max-width: 80%;
+    text-align: center;
+  }
 
-    .about-container {
-      flex-direction: column-reverse;
-    }
+  .about-container {
+    flex-direction: column-reverse;
+  }
 
-    .about-container img {
-      width: 300px;
-    }
+  .about-container img {
+    width: 300px;
+  }
 
-    .about-article {
-      text-align: center;
-    }
+  .about-article {
+    text-align: center;
   }
 }
